[package]
name = "test_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1.6"
encoding_rs = "0.8.31"
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }  # or specify more specific features if not everything is needed
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.117"